frontend/test/should_fail/cast_node_types_exec.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		def unrelN:UnrelN;
		exec ({
			unrelN = (UnrelN)n
		});
	}
}
